* Thu Jul 7 2011 Thunor <thunorsif@hotmail.com>
- New widget: <comboboxentry></comboboxentry>, full action function set.

* Wed Jul 6 2011 Thunor <thunorsif@hotmail.com>
- Modified the button and pixmap widgets' refresh functions so that
  images are only refreshed when the widgets have been realized.
- Fixed the gtkdialog_lexer.l errors I found as reported in issue 11.

* Tue Jul 5 2011 Thunor <thunorsif@hotmail.com>
- Added image positioning support to buttons with images and labels.

* Mon Jul 4 2011 Thunor <thunorsif@hotmail.com>
- Connected up the GtkComboBox's "changed" signal in glade_support.c.

* Sat Jul 2 2011 Thunor <thunorsif@hotmail.com>
- Added a 2.20.0 GTK+ version check for gtk_widget_get_realized and on
  false will use the deprecated GTK_WIDGET_REALIZED macro.
- Added code to widget_signal_executor to automate managing the default
  signal for widget types.
- Added comboboxtext default signal support for action and action type
  directives.

* Fri Jul 1 2011 Thunor <thunorsif@hotmail.com>
- New widget: <comboboxtext></comboboxtext>, full action function set.

* Thu Jun 30 2011 Thunor <thunorsif@hotmail.com>
- Fixed three bugs in glade_support.c that were checking that command
  wasn't NULL when they should've been checking full_command instead
  (likely an initial mistake and then copied and pasted).
  
* Sat Jun 25 2011 Thunor <thunorsif@hotmail.com>
- Added width and height tag attribute support for the scrollable hbox
  and vbox to control the viewport dimensions.
- "selection_mode" will now accept 3, 2, 1, or 0 as well as multiple,
  browse, single and none. This makes it consistent with the existing
  selection-mode GtkCList (<table>) property.
- New widget: <hseparator tagattr></hseparator>.
- New widget: <vseparator tagattr></vseparator>.
  
* Fri Jun 24 2011 Thunor <thunorsif@hotmail.com>
- Added hbox and vbox widget scrolling capability via the "scrollable"
  custom attribute. If scrollable="true/yes/1" then the box is placed